--- a/005.html
+++ b/005.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">多次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材---G206---附城收费站---G78汕昆高速—立坡立交---G25长深高速---岗头立交---G0422武深高速—会前立交---G45大广高速---粤赣界；江西省: 赣粤界---G45大广高速---杨村收费站---岗头立交---G0422武深高速---G45大广高速---粤赣界：<br><hr><span id="pro">江西省</span>: 赣粤界---G45大广高速---收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材---G206---附城收费站---G78汕昆高速—立坡立交---G25长深高速---岗头立交---G0422武深高速—会前立交---G45大广高速---粤赣界<br><hr><span id="pro">江西省</span>: 赣粤界---G45大广高速---杨村收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
