--- a/sn001.html
+++ b/sn001.html
@@ -248,7 +248,7 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a ui-first-child" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">B4405072023052600070</div>
+                    <div class="detail-value " id="reqNo">B4405072023060600070</div>
                 </li>
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">有效范围：</div>
@@ -256,7 +256,7 @@
                 </li>
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod ">通行日期：</div>
-                    <div class="detail-value " id="passDate">2023-06-01至2023-09-01</div>
+                    <div class="detail-value " id="passDate">2023-06-06至2023-09-06</div>
                 </li>
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod ">通行次数：</div>
@@ -265,7 +265,7 @@
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>  新丰村---G324---池尾收费站---S17揭普惠高速---S14汕湛高速---G1523甬莞高速---常平收费站---新城大道---环常南路---东莞市苏为高分子材料有限公司（往返运输） 
+                        <br>  新丰村---盐龙大道---高桥收费站---S20外环高速---S29从莞深高速---G1523甬莞高速---常平收费站---新城大道---环常南路---东莞市苏为高分子材料有限公司（往返运输） 
                     </div>
                     
                 </li>
@@ -282,7 +282,7 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">挖机</div>
+                    <div class="detail-value " id="cargoInfo">履带吊</div>
                 </li>
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">货物重量：</div>
