--- a/sn001.html
+++ b/sn001.html
@@ -282,7 +282,7 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">履带吊</div>
+                    <div class="detail-value " id="cargoInfo">挖机</div>
                 </li>
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">货物重量：</div>
