--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>：顺源达建材---G362---荷城收费站---S5广台高速---G1508广州绕城高速---G15沈海高速---G45大广高速---G0422武深高速---粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界---G0422武深高速---田庄收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>：顺源达建材---石丰路---庆丰收费站---G0421许广高速---S8广佛肇高速---S41机场高速---G45大广高速---G0422武深高速---粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界---G0422武深高速---田庄收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
