--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>：顺源达建材---石丰路---庆丰收费站---G0421许广高速---S8广佛肇高速---S41机场高速---G45大广高速---G0422武深高速---粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界---G0422武深高速---田庄收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>：顺源达建材---沙田大道---进港北路---沙田收费站---S3广深沿江高速---G15沈海高速---S41机场高速---G45大广高速---G0422武深高速---粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界---G0422武深高速---田庄收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -98,7 +98,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
                     <div class="detail-value " id="cargoInfo">挖机</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">40.00吨</div></li>
+                    <div class="detail-value " id="cargoWeight">60.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
                     <div class="detail-value " id="cargoOutline">14.00 × 3.75 × 3.60</div></li>
                     
@@ -118,7 +118,7 @@
                 
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车货总体信息</li> <!-- 车货总体信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">60.00吨</div></li>
+                    <div class="detail-value " id="totalWeight">84.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
                     <div class="detail-value " id="totalOutline">24.00 × 3.75× 4.50</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
