--- a/sn001.html
+++ b/sn001.html
@@ -265,7 +265,7 @@
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>  新丰村---S379---石头收费站---G94珠三角环线高速---G1523甬莞高速---常平收费站---新城大道---环常南路---东莞市苏为高分子材料有限公司（往返运输） 
+                        <br>  纽尚科技与那---凤塘大道---国际会展中心收费站---S3广深沿江高速---前海收费站---临海大道---一丹中心深圳地质项目部（往返运输） 
                     </div>
                     
                 </li>
@@ -282,7 +282,7 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">挖机</div>
+                    <div class="detail-value " id="cargoInfo">刀盘</div>
                 </li>
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">货物重量：</div>
