--- a/004.html
+++ b/004.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">内蒙古自治区</span>: 碌碡墕收费站--G18荣乌高速-G65包茂高速--蒙陕界<br><hr></div><div class="detail-value " id="roads"><br><span id="pro">陕西省</span>: 陕蒙界--G65包茂高速-G1812沧榆高速-大保当收费站-G337--兖州煤业榆林能化有限公司 <br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">内蒙古自治区</span>: 碌碡墕收费站---G18荣乌高速---G65包茂高速---蒙陕界<br><hr><span id="pro">陕西省</span>: 陕蒙界---G65包茂高速---G1812沧榆高速---大保当收费站---G337---兖州煤业榆林能化有限公司 <br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
